--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
                     Hongxin Wei
                   </div>
                   <div id='header-text-title'>
-                    Ph.D. @ NTU, Singapore
+                    Assistant Professor @ SUSTech, China
                   </div>
                   <div id='header-text-email'>
-                    hongxin001 [at] e.ntu.edu.sg
+                    weihx@sustech.edu.cn; hongxin001 [at] e.ntu.edu.sg 
                   </div>
                   <div>
                     <a href="https://github.com/hongxin001", target="_blank">[GitHub]</a>
@@ -118,7 +118,7 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                    I just finished my Ph.D. degree at the <a href="http://scse.ntu.edu.sg/Pages/Home.aspx" target="_blank">School of Computer Science and Engineering</a>, <a href="https://www.ntu.edu.sg/Pages/home.aspx" target="_blank">Nanyang Technological University</a>, supervised by <a href="https://personal.ntu.edu.sg/boan/" target="_blank">Prof. Bo An</a>.
+                    I am an Assistant Professor in <a href="https://stat-ds.sustech.edu.cn/" target="_blank">the Department of Statistics and Data Science</a> at <a href="https://www.sustech.edu.cn/en/" target="_blank">SUSTech</a> (China, Shenzhen). I obtained my Ph.D. degree at the <a href="http://scse.ntu.edu.sg/Pages/Home.aspx" target="_blank">School of Computer Science and Engineering</a>, <a href="https://www.ntu.edu.sg/Pages/home.aspx" target="_blank">Nanyang Technological University</a>, supervised by <a href="https://personal.ntu.edu.sg/boan/" target="_blank">Prof. Bo An</a>.
                     During my Ph.D, I was fortunate to work as a visiting scholar in the group of <a href="https://pages.cs.wisc.edu/~sharonli/" target="_blank">Prof. Sharon Yixuan Li</a> at the <a href="https://www.cs.wisc.edu/" target="_blank">University of Wisconsin Madison</a> in 2022.
                     Previously I spent a wonderful year as a research assistant in <a href="https://iiis.tsinghua.edu.cn/" target="_blank">the Institute for Interdisciplinary Information Sciences</a> at Tsinghua University.
                     Prior to that, I received my B.E. in Software Engineering from <a href="http://english.hust.edu.cn/" target="_blank">Huazhong University of Science and Technology</a> in 2016.
