--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     Assistant Professor @ SUSTech, China
                   </div>
                   <div id='header-text-email'>
-                    weihx@sustech.edu.cn; hongxin001 [at] e.ntu.edu.sg 
+                    weihx [at] sustech.edu.cn; hongxin001 [at] e.ntu.edu.sg 
                   </div>
                   <div>
                     <a href="https://github.com/hongxin001", target="_blank">[GitHub]</a>
