--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hongxin Wei @ NTU</title>
+    <title>Hongxin Wei @ SUSTech</title>
     <link rel="icon" href="imgs/logo.ico" type="image/x-icon">
     <!-- Meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="keywords" content="Hongxin, wei, ntu, homepage, robust, deep, learning">
+    <meta name="keywords" content="Hongxin, wei, ntu, sustech, homepage, robust, deep, learning">
 
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
