--- a/index.html
+++ b/index.html
@@ -146,6 +146,15 @@
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
+                        May 2023
+                    </div>
+                    <div class="col">
+                        I have multiple opening positions for <a href="https://zhuanlan.zhihu.com/p/594652654" target="_blank">research interns and RAs</a>. Please feel free to contact me with your resume if you are interested in join our research. The same goes for <a href="https://mp.weixin.qq.com/s/tuSPX1L46sRTTEgi_F3POA" target="_blank">Mphil or PhD applications</a>.
+                    </div>
+                </div>
+                
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
                         December 2022
                     </div>
                     <div class="col">
