--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                             Zhenlong Liu
                         </div>
                         <div class='paper-desc'>
-                            Master (2023 fall) at SUSTech
+                            Master student (2023 fall) at SUSTech
                         </div>
                     </div>
 
