--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         May 2023
                     </div>
                     <div class="col">
-                        I have multiple opening positions for <a href="https://zhuanlan.zhihu.com/p/594652654" target="_blank">research interns and RAs</a>. Please feel free to contact me with your resume if you are interested in join our research. The same goes for <a href="https://mp.weixin.qq.com/s/tuSPX1L46sRTTEgi_F3POA" target="_blank">Mphil or PhD applications</a>.
+                        I have multiple opening positions for <a href="https://zhuanlan.zhihu.com/p/594652654" target="_blank">research interns, RAs and PostDocs</a>. Please feel free to contact me with your resume if you are interested in join our research. The same goes for <a href="https://mp.weixin.qq.com/s/tuSPX1L46sRTTEgi_F3POA" target="_blank">Mphil or PhD applications</a>.
                     </div>
                 </div>
                 
@@ -168,7 +168,7 @@
                         December 2022
                     </div>
                     <div class="col">
-                        I will be serving as a reviewer for CVPR 2023, ICML 2023, IJCAI 2023, KDD 2023 and ICCV 2023.
+                        I will be serving as a reviewer for CVPR 2023, ICML 2023, NeurIPS 2023, IJCAI 2023, KDD 2023 and ICCV 2023.
                     </div>
                 </div>
 
@@ -181,7 +181,7 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top-news'>
+                <!-- <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
                         June 2022
                     </div>
@@ -242,7 +242,7 @@
                     <div class="col">
                         I will be serving as a program committee member for SDM 2022.
                     </div>
-                </div>
+                </div> -->
 
 
                 <div class='row vspace-top-news'>
@@ -254,7 +254,7 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top-news'>
+                <!-- <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
                         June 2021
                     </div>
@@ -289,7 +289,7 @@
                     <div class="col">
                         I will be serving as a <a href="https://icml.cc/Conferences/2021/Reviewers" target="_blank">reviewer</a> for ICML 2021.
                     </div>
-                </div>
+                </div> -->
 
 
 
