--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top-news'>
+                <!-- <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
                         December 2022
                     </div>
                     <div class="col">
                         I will be serving as a reviewer for CVPR 2023, ICML 2023, NeurIPS 2023, IJCAI 2023, KDD 2023 and ICCV 2023.
                     </div>
-                </div>
+                </div> -->
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
@@ -178,6 +178,16 @@
                     </div>
                     <div class="col">
                         I am honored to be recognized as <a href="https://neurips.cc/Conferences/2022/ProgramCommittee" target="_blank">Top Reviewers</a> in NeurIPS 2022.
+                    </div>
+                </div>
+
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        May 2022
+                    </div>
+                    <div class="col">
+                        Two papers are accepted by ICML 2022 (Accept rate: 21.9%).
                     </div>
                 </div>
 
