--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
                             Wenyu Jiang
                         </div>
                         <div class='paper-desc'>
-                            Visting students, Ph.D. student at Nanjing University.
+                            Research Intern, Ph.D. student at Nanjing University.
                         </div>
                     </div>
 
@@ -686,7 +686,7 @@
                             Shuoyuan Wang
                         </div>
                         <div class='paper-desc'>
-                            Visting students, Master student at Macau University
+                            Research Intern, Master student at Macau University
                         </div>
                     </div>
 
@@ -695,7 +695,7 @@
                             Jianguo Huang
                         </div>
                         <div class='paper-desc'>
-                            Visting students, Master student at ShanghaiTech University
+                            Research Intern, Master student at ShanghaiTech University
                         </div>
                     </div>
 
