--- a/index.html
+++ b/index.html
@@ -785,10 +785,10 @@
 
                     <div class="col">
                         <div class='paper-title'>
-                             
+                             Liang Wang
                         </div>
                         <div class='paper-desc'>
-                             
+                            Undergraduate student at HITSZ
                         </div>
                     </div>
 
