--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                             In Defense of Softmax Parametrization for Calibrated and Consistent Learning to Defer
                         </div>
                         <div class='paper-desc'>
-                            ICML 2023
+                            NeurIPS 2023
                         </div>
                         <div class='paper-authors'>
                             Yuzhou Cao, Hussein Mozannar, Lei Feng, <b>Hongxin Wei</b>, Bo An
@@ -356,7 +356,7 @@
                             Regression with Cost-based Rejection
                         </div>
                         <div class='paper-desc'>
-                            ICML 2023
+                            NeurIPS 2023
                         </div>
                         <div class='paper-authors'>
                             Xin Cheng, Yuzhou Cao, Haobo Wang, <b>Hongxin Wei</b>, Bo An, Lei Feng
