--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   <div>
                     <a href="https://github.com/hongxin001", target="_blank">[GitHub]</a>
                     <a href="https://scholar.google.com/citations?user=cABH034AAAAJ&hl=en", target="_blank">[Google Scholar]</a>
-                    <a href="docs\CV_hongxin_2023_04_03.pdf", target="_blank">[Download CV]</a>
+                    <a href="docs\CV_hongxin_2023_10_26.pdf", target="_blank">[Download CV]</a>
                   </div>
 
                 </div>
@@ -314,6 +314,20 @@
                     ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
                 </div>
 
+                <div class='row vspace-top'>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Optimization-Free Test-Time Adaptation for Cross-Person Activity Recognition.
+                        </div>
+                        <div class='paper-desc'>
+                            IMWUT/Ubicomp 2024
+                        </div>
+                        <div class='paper-authors'>
+                            Shuoyuan Wang, Jindong Wang, HuaJun Xi, Bob Zhang, Lei Zhang, <b>Hongxin Wei</b>
+                        </div>
+                    </div>
+                </div>
                 
                 <div class='row vspace-top'>
 
