--- a/index.html
+++ b/index.html
@@ -720,6 +720,42 @@
 
                     <div class="col">
                         <div class='paper-title'>
+                            Conformal Prediction for Deep Classifier via Label Ranking
+                        </div>
+                        <div class='paper-authors'>
+                            Jianguo Huang, Huajun Xi, Linjun Zhang, Huaxiu Yao, Yue Qiu, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2310.06430.pdf" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Understanding and Mitigating the Label Noise in Pre-training on Downstream Tasks
+                        </div>
+                        <div class='paper-authors'>
+                            Hao Chen, Jindong Wang, Ankit Shah, Ran Tao, <b>Hongxin Wei</b>, Xing Xie, Masashi Sugiyama, Bhiksha Raj
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2309.17002.pdf" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
                             MetaInfoNet: Learning Task-Guided Information for Sample Reweighting.
                         </div>
                         <div class='paper-authors'>
