--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         May 2023
                     </div>
                     <div class="col">
-                        I have multiple opening positions for <a href="https://zhuanlan.zhihu.com/p/594652654" target="_blank">research interns, RAs and PostDocs</a>. Please feel free to contact me with your resume if you are interested in join our research. The same goes for <a href="https://mp.weixin.qq.com/s/tuSPX1L46sRTTEgi_F3POA" target="_blank">Mphil or PhD applications</a>.
+                        I am always looking for highly-motivated research interns, RAs and PostDocs to join our research (refer to <a href="https://zhuanlan.zhihu.com/p/594652654" target="_blank">this page</a>). Mphil or PhD applications (2024 or 2025 fall) are also welcome.
                     </div>
                 </div>
                 
