--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         May 2023
                     </div>
                     <div class="col">
-                        I am always looking for highly-motivated research interns, RAs and PostDocs to join our research (refer to <a href="https://zhuanlan.zhihu.com/p/594652654" target="_blank">this page</a>). Mphil or PhD applications (2024 or 2025 fall) are also welcome.
+                        I am always looking for highly-motivated research interns, RAs and PostDocs to join our research (refer to <a href="https://zhuanlan.zhihu.com/p/665497780?" target="_blank">this page</a>). Mphil or PhD applications (2024 or 2025 fall) are also welcome.
                     </div>
                 </div>
                 
