--- a/index.html
+++ b/index.html
@@ -894,6 +894,37 @@
                     </div>
 
                 </div>
+
+                <div class='row vspace-top'>
+                    <div class="col">
+                        <div class='paper-title'>
+                            Zicheng Xie
+                        </div>
+                        <div class='paper-desc'>
+                            Undergraduate student at SUSTech
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Beier Luo
+                        </div>
+                        <div class='paper-desc'>
+                            Undergraduate student at SUSTech (Incoming master student in 2024 fall)
+                        </div>
+                    </div>
+
+
+                    <div class="col">
+                        <div class='paper-title'>
+                             Junjie Qiu
+                        </div>
+                        <div class='paper-desc'>
+                            Undergraduate student at SUSTech
+                        </div>
+                    </div>
+
+                </div>
                 
 
 
