--- a/index.html
+++ b/index.html
@@ -812,6 +812,14 @@
                             Research Intern, Master student at Central South University
                         </div>
                     </div> -->
+                    <div class="col">
+                        <div class='paper-title'>
+                            Hongfu Gao
+                        </div>
+                        <div class='paper-desc'>
+                            Research Intern, Master student at XJTU
+                        </div>
+                    </div>
 
                     <div class="col">
                         <div class='paper-title'>
@@ -831,14 +839,7 @@
                         </div>
                     </div>
 
-                    <div class="col">
-                        <div class='paper-title'>
-                            Ningyi Peng
-                        </div>
-                        <div class='paper-desc'>
-                            Undergraduate student at SUSTech
-                        </div>
-                    </div>
+
 
 
                 </div>
