--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
                     
                     Research topics that I am currently working on include:
                 </p>
-                <li> <i>Exploring non-conventional data sources. </i> </li>
-                <li> <i>Auditing and handling data quality;</i> </li>
-                <li> <i>Stress testing and adapting in extreme data conditions. </i> </li>
-                <li> <i>Protecting data copyright and privacy;</i> </li>
+                <li> <i>Data efficiency: Data valuation, Data selection; </i> </li>
+                <li> <i>Data quality: Label noise, Distribution shift; </i> </li>
+                <li> <i>Data privacy: Membership inference attack, Machine unlearning;</i> </li>
+                <li> <i>Reliable AI: Conformal prediction, OOD detection, Confidence Calibration;</i> </li>
 
 
                 
