--- a/index.html
+++ b/index.html
@@ -128,16 +128,12 @@
                     <!-- My research interest is within the scope of robust deep learning, including robustness against noisy labels, out-of-distribution examples, and adversarial examples. -->
                     My research interest falls in the scope of Natural Robustness, which preserves model performance under naturally induced data corruptions or alterations across the machine learning pipeline.
                     The goal of my research is to build a reliable learning system, which can work safely and adaptively in the presence of unexpected data conditions across the entire pipeline.
-                    My research is closely related to data-centric machine learning with keywords: annotation, augmentation, imbalance, noise, distillation, out-of-distribution, and privacy.
-                    <!-- Most of my work explore, understand, and mitigate the problem settings where neural networks would naturally fails. -->
-                    
-                    Research topics that I am currently working on include:
+                    My research is closely related to data-centric machine learning and foundation model, including:
                 </p>
-                <li> <i>Data efficiency: Data valuation, Data selection; </i> </li>
-                <li> <i>Data quality: Label noise, Distribution shift; </i> </li>
-                <li> <i>Data privacy: Membership inference attack, Machine unlearning;</i> </li>
-                <li> <i>Reliable AI: Conformal prediction, OOD detection, Confidence Calibration;</i> </li>
-
+                <li> <i>Data quality: label noise, distribution shift; </i> </li>
+                <li> <i>Data efficiency: data valuation, data selection; </i> </li>
+                <li> <i>Data privacy: membership inference attack, machine unlearning;</i> </li>
+                <li> <i>Reliable AI: conformal prediction, learning with rejection, confidence calibration;</i> </li>
 
                 
 
