--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     The goal of my research is to build a reliable learning system, which can work safely and adaptively in the presence of unexpected data conditions across the entire pipeline.
                     My research is closely related to data-centric machine learning and foundation model, including:
                 </p>
-                <li> <i>Data quality: label noise, distribution shift; </i> </li>
+                <li> <i>Data quality: label noise, outliers, malicious data; </i> </li>
                 <li> <i>Data efficiency: data valuation, data selection; </i> </li>
                 <li> <i>Data privacy: membership inference attack, machine unlearning;</i> </li>
                 <li> <i>Reliable AI: conformal prediction, learning with rejection, confidence calibration;</i> </li>
