--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
                 <li> <i>Data quality: label noise, outliers, malicious data; </i> </li>
                 <li> <i>Data efficiency: data valuation, data selection; </i> </li>
                 <li> <i>Data privacy: membership inference attack, machine unlearning;</i> </li>
-                <li> <i>Reliable AI: conformal prediction, learning with rejection, confidence calibration;</i> </li>
+                <li> <i>Reliable AI: conformal prediction, learning with rejection, confidence calibration (For LLM: harmless & honesty);</i>
+                </li>
 
                 
 
