--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@
                 <div class='vspace-top'>
                     <h1>News</h1>
                 </div>
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
+                        December 2023
+                    </div>
+                    <div class="col">
+                        We release a Python toolbox for conformal prediction research <a href="https://github.com/ml-stat-Sustech/TorchCP" target="_blank">TorchCP</a>.
+                    </div>
+                </div>
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
