--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
 
                 <div class='row vspace-top-news'>
                     <div class="col-sm-2 news-date">
+                        Jan 2024
+                    </div>
+                    <div class="col">
+                        Three papers are accepted by ICLR 2024 (Two are Spotlights).
+                    </div>
+                </div>
+
+                <div class='row vspace-top-news'>
+                    <div class="col-sm-2 news-date">
                         May 2023
                     </div>
                     <div class="col">
@@ -311,6 +320,73 @@
                     ( <sup>*</sup> Corresponding author; <sup>&#8224</sup> Equal contribution)
                 </div>
 
+                                
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            DOS: Diverse Outlier Sampling for Out-of-Distribution Detection
+                        </div>
+                        <div class='paper-desc'>
+                            ICLR 2024
+                        </div>
+                        <div class='paper-authors'>
+                            Wenyu Jiang, Hao Cheng, MingCai Chen, Chongjun Wang, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://openreview.net/pdf?id=iriEqxFB4y" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Understanding and Mitigating the Label Noise in Pre-training on Downstream Tasks
+                        </div>
+                        <div class='paper-desc'>
+                            ICLR 2024 (Spotlight)
+                        </div>
+                        <div class='paper-authors'>
+                            Hao Chen, Jindong Wang, Ankit Shah, Ran Tao, <b>Hongxin Wei</b>, Xing Xie, Masashi Sugiyama, Bhiksha Raj
+                        </div>
+                        <div>
+                            <a href="https://openreview.net/pdf?id=TjhUtloBZU" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Consistent Multi-Class Classification from Multiple Unlabeled Datasets
+                        </div>
+                        <div class='paper-desc'>
+                            ICLR 2024 (Spotlight)
+                        </div>
+                        <div class='paper-authors'>
+                            Zixi Wei, Senlin Shu, Yuzhou Cao, Hongxin Wei, Bo An, Lei Feng
+                        </div>
+                        <div>
+                            <a href="https://openreview.net/pdf?id=fW7DOHDQvF" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+
+
                 <div class='row vspace-top'>
 
                     <div class="col">
@@ -380,7 +456,7 @@
 
                     <div class="col">
                         <div class='paper-title'>
-                            Mitigating Memorization of Noisy Labels by Clipping the Model Prediction.
+                            Mitigating Memorization of Noisy Labels by Clipping the Model Prediction
                         </div>
                         <div class='paper-desc'>
                             ICML 2023
@@ -425,7 +501,7 @@
 
                     <div class="col">
                         <div class='paper-title'>
-                            A Generalized Unbiased Risk Estimator for Learning with Augmented Classes.
+                            A Generalized Unbiased Risk Estimator for Learning with Augmented Classes
                         </div>
                         <div class='paper-desc'>
                             AAAI 2023
@@ -460,7 +536,7 @@
 
                     <div class="col">
                         <div class='paper-title'>
-                            Analytic Class-Incremental Learning with Absolute Memorization and Privacy Protection.
+                            Analytic Class-Incremental Learning with Absolute Memorization and Privacy Protection
                         </div>
                         <div class='paper-desc'>
                             NeurIPS 2022
@@ -480,7 +556,7 @@
 
                     <div class="col">
                         <div class='paper-title'>
-                            Mitigating Neural Network Overconfidence with Logit Normalization.
+                            Mitigating Neural Network Overconfidence with Logit Normalization
                         </div>
                         <div class='paper-desc'>
                             ICML 2022
@@ -529,13 +605,13 @@
 
                     <div class="col">
                         <div class='paper-title'>
-                            Deep Learning from Multiple Noisy Annotators as A Union.
+                            Deep Learning from Multiple Noisy Annotators as A Union
                         </div>
                         <div class='paper-desc'>
 				            TNNLS
                         </div>
                         <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, Renchunzi Xie, Lei Feng, Bo An.
+                            <b>Hongxin Wei</b>, Renchunzi Xie, Lei Feng, Bo An
                         </div>
                         <div>
                             <a href="/docs/papers/2022TNNLS.pdf" target="_blank">[Paper]</a>
@@ -553,13 +629,13 @@
 
                     <div class="col">
                         <div class='paper-title'>
-                            GearNet: Stepwise Dual Learning for Weakly Supervised Domain Adaptation.
+                            GearNet: Stepwise Dual Learning for Weakly Supervised Domain Adaptation
                         </div>
                         <div class='paper-desc'>
                             AAAI 2022
                         </div>
                         <div class='paper-authors'>
-                            Renchunzi Xie, <b>Hongxin Wei</b> <sup>*</sup>, Lei Feng,  Bo An.
+                            Renchunzi Xie, <b>Hongxin Wei</b> <sup>*</sup>, Lei Feng,  Bo An
                         </div>
                         <div>
                             <a href="https://arxiv.org/pdf/2201.06001.pdf" target="_blank">[Paper]</a>
@@ -576,13 +652,13 @@
 
                     <div class="col">
                         <div class='paper-title'>
-                            Open-set Label Noise Can Improve Robustness Against Inherent Label Noise.
+                            Open-set Label Noise Can Improve Robustness Against Inherent Label Noise
                         </div>
                         <div class='paper-desc'>
                             NeurIPS 2021
                         </div>
                         <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, Lue Tao, Renchunzi Xie, Bo An.
+                            <b>Hongxin Wei</b>, Lue Tao, Renchunzi Xie, Bo An
                         </div>
                         <div>
                             <a href="https://arxiv.org/pdf/2106.10891.pdf" target="_blank">[Paper]</a>
@@ -627,7 +703,7 @@
                             SIGKDD 2021
                         </div>
                         <div class='paper-authors'>
-                            Lei Feng, Senlin Shu, Yuzhou Cao, Lue Tao, <b>Hongxin Wei</b>, Tao Xiang, Bo An, Gang Niu.
+                            Lei Feng, Senlin Shu, Yuzhou Cao, Lue Tao, <b>Hongxin Wei</b>, Tao Xiang, Bo An, Gang Niu
                         </div>
                         <div>
                             <a href="https://personal.ntu.edu.sg/boan/papers/KDD21_Multiinstance.pdf" target="_blank">[Paper]</a>
@@ -645,13 +721,13 @@
 
                     <div class="col">
                         <div class='paper-title'>
-                            Commission Fee is not Enough: A Hierarchical Reinforced Framework for Portfolio Management.
+                            Commission Fee is not Enough: A Hierarchical Reinforced Framework for Portfolio Management
                         </div>
                         <div class='paper-desc'>
                             AAAI 2021
                         </div>
                         <div class='paper-authors'>
-                            Rundong Wang <sup>&#8224</sup>, <b>Hongxin Wei</b> <sup>&#8224</sup>, Bo An, Zhouyan Feng, Jun Yao.
+                            Rundong Wang <sup>&#8224</sup>, <b>Hongxin Wei</b> <sup>&#8224</sup>, Bo An, Zhouyan Feng, Jun Yao
                         </div>
                         <div>
                             <a href="https://personal.ntu.edu.sg/boan/papers/AAAI21_Stock.pdf" target="_blank">[Paper]</a>
@@ -667,13 +743,13 @@
 
                     <div class="col">
                       <div class='paper-title'>
-                        Embedding-Augmented Generalized Matrix Factorization for Recommendation with Implicit Feedback.
+                        Embedding-Augmented Generalized Matrix Factorization for Recommendation with Implicit Feedback
                       </div>
                       <div class='paper-desc'>
                         IEEE Intelligent Systems (IEEE-IS)
                       </div>
                       <div class='paper-authors'>
-                        Lei Feng, <b>Hongxin Wei</b> <sup>*</sup>, Qingyu Guo, Zhuoyi Lin, Bo An.
+                        Lei Feng, <b>Hongxin Wei</b> <sup>*</sup>, Qingyu Guo, Zhuoyi Lin, Bo An
                       </div>
                       <div>
                          <a href="https://ieeexplore.ieee.org/document/9252133" target="_blank">[Paper]</a>
@@ -695,7 +771,7 @@
                           CVPR 2020
                       </div>
                       <div class='paper-authors'>
-                        <b>Hongxin Wei</b>, Lei Feng, Xiangyu Chen, Bo An.
+                        <b>Hongxin Wei</b>, Lei Feng, Xiangyu Chen, Bo An
                       </div>
                       <div>
                          <a href="https://arxiv.org/pdf/2003.02752.pdf" target="_blank">[Paper]</a>
@@ -728,23 +804,7 @@
                     </div>
                 </div>
 
-                <div class='row vspace-top'>
-                    <!-- <div class="col-sm-3">
-                        <img src='imgs/star_img.png' class='img-fluid'>
-                    </div> -->
 
-                    <div class="col">
-                        <div class='paper-title'>
-                            Understanding and Mitigating the Label Noise in Pre-training on Downstream Tasks
-                        </div>
-                        <div class='paper-authors'>
-                            Hao Chen, Jindong Wang, Ankit Shah, Ran Tao, <b>Hongxin Wei</b>, Xing Xie, Masashi Sugiyama, Bhiksha Raj
-                        </div>
-                        <div>
-                            <a href="https://arxiv.org/pdf/2309.17002.pdf" target="_blank">[Paper]</a>
-                        </div>
-                    </div>
-                </div>
 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
@@ -753,10 +813,10 @@
 
                     <div class="col">
                         <div class='paper-title'>
-                            MetaInfoNet: Learning Task-Guided Information for Sample Reweighting.
+                            MetaInfoNet: Learning Task-Guided Information for Sample Reweighting
                         </div>
                         <div class='paper-authors'>
-                            <b>Hongxin Wei</b>, Lei Feng, Rundong Wang, Bo An.
+                            <b>Hongxin Wei</b>, Lei Feng, Rundong Wang, Bo An
                         </div>
                         <div>
                             <a href="https://arxiv.org/pdf/2012.05273.pdf" target="_blank">[Paper]</a>
