--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                             ICLR 2024 (Spotlight)
                         </div>
                         <div class='paper-authors'>
-                            Zixi Wei, Senlin Shu, Yuzhou Cao, Hongxin Wei, Bo An, Lei Feng
+                            Zixi Wei, Senlin Shu, Yuzhou Cao, <b>Hongxin Wei</b>, Bo An, Lei Feng
                         </div>
                         <div>
                             <a href="https://openreview.net/pdf?id=fW7DOHDQvF" target="_blank">[Paper]</a>
