--- a/index.html
+++ b/index.html
@@ -794,6 +794,59 @@
                     <!-- (* Corresponding author; &#8224 Equal contribution) -->
                     <!-- <span style="font-size: 15px; vertical-align: bottom;">(* Corresponding author; &#8224 Equal contribution)</span> -->
                 </div>
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Does Confidence Calibration Help Conformal Prediction?
+                        </div>
+                        <div class='paper-authors'>
+                            Huajun Xi, Jianguo Huang, Lei Feng, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2402.04344" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Open-Vocabulary Calibration for Vision-Language Models
+                        </div>
+                        <div class='paper-authors'>
+                            Shuoyuan Wang, Jindong Wang, Guoqing Wang, Bob Zhang, Kaiyang Zhou, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2402.04655" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Conformal Prediction for Deep Classifier via Label Ranking
+                        </div>
+                        <div class='paper-authors'>
+                            Jianguo Huang, Huajun Xi, Linjun Zhang, Huaxiu Yao, Yue Qiu, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2310.06430.pdf" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
