--- a/index.html
+++ b/index.html
@@ -801,6 +801,40 @@
 
                     <div class="col">
                         <div class='paper-title'>
+                            Mitigating Privacy Risk in Membership Inference by Convex-Concave Loss
+                        </div>
+                        <div class='paper-authors'>
+                            Zhenlong Liu, Lei Feng, Huiping Zhuang, Xiaofeng Cao, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2402.05453" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
+                            Exploring Learning Complexity for Downstream Data Pruning
+                        </div>
+                        <div class='paper-authors'>
+                            Wenyu Jiang, Zhenlong Liu, Zejian Xie, Songxin Zhang, Bingyi Jing, <b>Hongxin Wei</b> <sup>*</sup>
+                        </div>
+                        <div>
+                            <a href="https://arxiv.org/pdf/2402.05356" target="_blank">[Paper]</a>
+                        </div>
+                    </div>
+                </div>
+                <div class='row vspace-top'>
+                    <!-- <div class="col-sm-3">
+                        <img src='imgs/star_img.png' class='img-fluid'>
+                    </div> -->
+
+                    <div class="col">
+                        <div class='paper-title'>
                             Does Confidence Calibration Help Conformal Prediction?
                         </div>
                         <div class='paper-authors'>
@@ -829,7 +863,7 @@
                         </div>
                     </div>
                 </div>
-                
+
 
                 <div class='row vspace-top'>
                     <!-- <div class="col-sm-3">
